--- a/scrum-clock/index.html
+++ b/scrum-clock/index.html
@@ -3,10 +3,22 @@
 <head>
     <title>Scrum Clock</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
+    <style>
+        #root {
+            width: 80vmin;
+            height: 80vmin;
+            margin: 0 auto;
+            overflow: hidden;
+        }
+        h1 {
+            text-align: center;
+            font-size: 5vh;
+        }
+    </style>
 </head>
 <body>
-<div id="root">
-</div>
+<h1>Scrum Clock</h1>
+<div id="root"></div>
 <script src="static/bundle.js"></script>
 </body>
 </html>
